--- a/src/app/shared/components/user-form/user-form.component.scss
+++ b/src/app/shared/components/user-form/user-form.component.scss
@@ -246,7 +246,7 @@
             display: block;
             margin-bottom: 3px; // Reduced from 10px to position closer to input
             font-weight: 600;
-            color: $primary-dark-blue;
+            color: #072d67;
             font-size: 1.5rem;
             letter-spacing: 0.02rem;
             transition: $transition-fast;
